--- a/index.html
+++ b/index.html
@@ -5,8 +5,68 @@
     <title>HTML Academy: Девайс</title>
   </head>
   <body>
+    <header>
+      <nav>
+        <a>
+          <img src="https://via.placeholder.com/150x100" alt="Логотип интернет магазина &laquo;Девайс&raquo;">
+        </a>
+        <form action="https://echo.htmlacademy.ru" method="post">
+          <input type="search" name="search" placeholder="Поиск по&nbsp;сайту">
+        </form>
+        <ul>
+          <li>
+            <a href="">Войти</a>
+          </li>
+          <li>
+            <a href="">Сравнить</a>
+          </li>
+          <li>
+            <a href="">Корзина</a>
+          </li>
+        </ul>
+        <ul>
+          <li>
+            <a href="">Каталог товаров</a>
+            <ul>
+              <li>
+                <a href="">Вирутальная реальность</a>
+              </li>
+              <li>
+                <a href="">Моноподы для селфи</a>
+              </li>
+              <li>
+                <a href="">Экшн-камеры</a>
+              </li>
+              <li>
+                <a href="">Фитнес браслеты</a>
+              </li>
+              <li>
+                <a href="">Умные часы</a>
+              </li>
+              <li>
+                <a href="">Квадрокоптер</a>
+              </li>
+            </ul>
+          </li>
+          <li>
+            <a href="">Доставка</a>
+          </li>
+          <li>
+            <a href="">Гарантия</a>
+          </li>
+          <li>
+            <a href="">Контакты</a>
+          </li>
+        </ul>
+      </nav>
+    </header>
 
-    <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">HTML и CSS, уровень 1</a>».</p>
+    <main>
 
+    </main>
+
+    <footer>
+
+    </footer>
   </body>
 </html>
