--- a/index.html
+++ b/index.html
@@ -59,6 +59,81 @@
           </li>
         </ul>
       </nav>
+      <!-- Слайдер -->
+      <article>
+        <ul>
+          <li>
+            <div>
+              <span>01</span>
+              <a href="">
+                <img src="https://via.placeholder.com/150x100" alt="Самая длинная селфи палка &laquo;Бренд&raquo;">
+              </a>
+              <p>Делай селфи,<br>как Бен Стиллер!</p>
+              <p>Самая длинная палка для селфи доступна в&nbsp;нашем магазине.<br>Восемь (Восемь, Карл!) метров длиной
+                и&nbsp;весом всего 5&nbsp;килограмм.</p>
+              <a href="">Подробнее</a>
+              <table>
+                <tr>
+                  <td>8,5 м</td>
+                  <td>5 кг</td>
+                  <td>Карбон</td>
+                </tr>
+                <tr>
+                  <th>Длина палки</th>
+                  <th>Вес палки</th>
+                  <th>Материал</th>
+                </tr>
+              </table>
+            </div>
+          </li>
+          <li>
+            <div>
+              <span>02</span>
+              <a href="">
+                <img src="https://via.placeholder.com/150x100" alt="Фитнес-браслет &laquo;Бренд&raquo;">
+              </a>
+              <p>Худеем<br>правильно!</p>
+              <p>Мотивирующие фитнес-браслеты помогут найти в&nbsp;себе силы<br>не&nbsp;пропускать занятия
+                и&nbsp;соблюдать диету.</p>
+              <a href="">Подробнее</a>
+              <table>
+                <tr>
+                  <td>48 Часов</td>
+                </tr>
+                <tr>
+                  <th>Без подзарядки</th>
+                </tr>
+              </table>
+            </div>
+          </li>
+          <li>
+            <div>
+              <span>03</span>
+              <a href="">
+                <img src="https://via.placeholder.com/150x100" alt="Квадрокоптер с&nbsp;мощным лазером, замаскированным
+                под стандартную камеру. &laquo;Бренд&raquo;">
+              </a>
+              <p>Порхает как бабочка,<br>жалит как пчела!</p>
+              <p>Этот обычный, на&nbsp;первый взгляд, квадрокоптер оснащен<br>мощным лазером, замаскированным под
+                стандартную камеру.</p>
+              <a href="">Подробнее</a>
+              <table>
+                <tr>
+                  <td>800 м</td>
+                  <td>50 м</td>
+                </tr>
+                <tr>
+                  <th>Дальность полета</th>
+                  <th>Радиус поражения</th>
+                </tr>
+              </table>
+            </div>
+          </li>
+        </ul>
+        <button type="button" aria-label="Первый слайд"></button>
+        <button type="button" aria-label="Второй слайд"></button>
+        <button type="button" aria-label="Третий слайд"></button>
+      </article>
     </header>
 
     <main>
