Каталог популярных товаров, второй слайдер с услугами

--- a/index.html
+++ b/index.html
@@ -137,7 +137,118 @@
     </header>
 
     <main>
+      <h1>Главная страница интернет-магазина гаджетов &laquo;ДЕВАЙС&raquo;</h1>
+      <section>
+        <h2>Популярный каталог товаров</h2>
+        <ul>
+          <li>
+            <a href="">
+              <img src="https://via.placeholder.com/150x100" alt="Товары категории
+              &laquo;Виртуальная реальность&raquo;">Виртуальная реальность
+            </a>
+          </li>
+          <li>
+            <a href="">
+              <img src="https://via.placeholder.com/150x100" alt="Товары категории
+              &laquo;Моноподы для селфи&raquo;">Моноподы для селфи
+            </a>
+          </li>
+          <li>
+            <a href="">
+              <img src="https://via.placeholder.com/150x100" alt="Товары категории
+              &laquo;Экшн-камеры&raquo;">Экшн-Камеры
+            </a>
+          </li>
+          <li>
+            <a href="">
+              <img src="https://via.placeholder.com/150x100" alt="Товары категории
+              &laquo;Фитнес-браслеты&raquo;">Фитнес-браслеты
+            </a>
+          </li>
+          <li>
+            <a href="">
+              <img src="https://via.placeholder.com/150x100" alt="Товары категории
+              &laquo;Умные часы&raquo;">Умные часы
+            </a>
+          </li>
+          <li>
+            <a href="">
+              <img src="https://via.placeholder.com/150x100" alt="Товары категории
+              &laquo;Квадрокоптеры&raquo;">Квадрокоптеры
+            </a>
+          </li>
+        </ul>
+      </section>
+      <section>
+        <h2>Сервисы предоставляемые интернет-магазином гаджетов &laquo;ДЕВАЙС&raquo;</h2>
+        <article>
+          <ul>
+            <li>
+              <button type="button">Доставка</button>
+            </li>
+            <li>
+              <button type="button">Гарантия</button>
+            </li>
+            <li>
+              <button type="button">Кредит</button>
+            </li>
+          </ul>
+          <div>
+            <h3>Доставка</h3>
+            <p>
+              Мы&nbsp;с&nbsp;удовольствием доставим выш товар прямо к&nbsp;вашему<br>подъезду совершенно бесплатно!
+              Ведь мы&nbsp;неплохо<br>заработаем, поднимая его на&nbsp;этаж.
+            </p>
+          </div>
+          <div>
+            <h3>Гарантия</h3>
+            <p>
+              Если из-за возгорания купленного у&nbsp;нас товара у&nbsp;вас сгорит дом&nbsp;&mdash;<br>
+              не&nbsp;переживайте, мы&nbsp;выдадим вам новый.<br>Товар, не&nbsp;дом, конечно&nbsp;же.
+            </p>
+          </div>
+          <div>
+            <h3>Кредит</h3>
+            <p>
+              Залезть в&nbsp;долговую яму стало проще! Кредитные консультанты<br>подберут для вас наиболее выгодные<br>
+              условия кредита. Выгодные для нашего банка, разумеется.
+            </p>
+          </div>
+        </article>
+      </section>
+      <section>
+        <h2>Популярные производители</h2>
+        <ul>
+          <li>
+           <a>
+             <img src="https://via.placeholder.com/150x100" alt="Компания DJI">
+           </a>
+          </li>
+          <li>
+            <a>
+              <img src="https://via.placeholder.com/150x100" alt="Компания SPGADGETS">
+            </a>
+          </li>
+          <li>
+            <a>
+              <img src="https://via.placeholder.com/150x100" alt="Компания GO PRO">
+            </a>
+          </li>
+          <li>
+            <a>
+              <img src="https://via.placeholder.com/150x100" alt="Компания GO PRO">
+            </a>
+          </li>
+          <li>
+            <a>
+              <img src="https://via.placeholder.com/150x100" alt="Компания VIVE">
+            </a>
+          </li>
+        </ul>
+      </section>
+      <section>
 
+      </section>
     </main>
 
     <footer>
