--- a/index.html
+++ b/index.html
@@ -247,12 +247,76 @@
         </ul>
       </section>
       <section>
-
+        <h2>О нас</h2>
+        <p>Огромный выбор гаджетов не&nbsp;оставит равнодушным гика,<br>который есть в&nbsp;каждом из&nbsp;нас.</p>
+        <p>Мы&nbsp;можем доставить ваш товар в&nbsp;самые отдаленные точки<br>России! DEVICE работает со&nbsp;многими
+          транспортными компаниями:</p>
+        <ul>
+          <li>Деловые линии</li>
+          <li>Автотрейдинг</li>
+          <li>ЖелДорЭкспедиция</li>
+        </ul>
+        <a href="#">Подробнее о нас</a>
+      </section>
+      <section>
+        <h2>Контакты</h2>
+        <p>Вы&nbsp;можете забрать товар сами, заехав в&nbsp;наш офис. Заодно, вы&nbsp;сможете<br>
+          проверить работоспособность покупки. Всякое бывает.</p>
+        <img src="https://via.placeholder.com/150x100" alt="Наш адрес: г.Москва, улица Строителей, 15">
+        <a href="#">Напишите нам</a>
       </section>
     </main>
 
     <footer>
-
+      <ul>
+        <li>
+          <a href="">Войти</a>
+        </li>
+        <li>
+          <a href="">Сравнить</a>
+        </li>
+        <li>
+          <a href="">Корзина</a>
+        </li>
+      </ul>
+      <a>
+        <img src="https://via.placeholder.com/150x100" alt="Логотип интернет магазина &laquo;Девайс&raquo;">
+      </a>
+      <p>г. Москва, ул. Строителей, 15</p>
+      <ul>
+        <li>
+          <a>Доставка</a>
+        </li>
+        <li>
+          <a>Гарантия</a>
+        </li>
+        <li>
+          <a>Контакты</a>
+        </li>
+      </ul>
+      <a href="tel:+74954959595">+7 (495) 495-95-95</a>
+      <ul>
+        <li>
+          <a href="#">
+            <span class="visually-hidden">Фейсбук</span>
+          </a>
+        </li>
+        <li class="social-item">
+          <a href="#">
+            <span class="visually-hidden">Инстаграм</span>
+          </a>
+        </li>
+        <li class="social-item">
+          <a href="#">
+            <span class="visually-hidden">Вконтакте</span>
+          </a>
+        </li>
+      </ul>
+      <p class="feedback">
+        <a href="https://htmlacademy.ru/intensive/htmlcss">
+          <img src="https://via.placeholder.com/150x100" alt="Разработано: HTML Academy">
+        </a>
+      </p>
     </footer>
   </body>
 </html>
