Везде добавил # в атрибут href

--- a/index.html
+++ b/index.html
@@ -15,47 +15,47 @@
         </form>
         <ul>
           <li>
-            <a href="">Войти</a>
+            <a href="#">Войти</a>
           </li>
           <li>
-            <a href="">Сравнить</a>
+            <a href="#">Сравнить</a>
           </li>
           <li>
-            <a href="">Корзина</a>
+            <a href="#">Корзина</a>
           </li>
         </ul>
         <ul>
           <li>
-            <a href="">Каталог товаров</a>
+            <a href="#">Каталог товаров</a>
             <ul>
               <li>
-                <a href="">Вирутальная реальность</a>
+                <a href="#">Вирутальная реальность</a>
               </li>
               <li>
-                <a href="">Моноподы для селфи</a>
+                <a href="#">Моноподы для селфи</a>
               </li>
               <li>
-                <a href="">Экшн-камеры</a>
+                <a href="#">Экшн-камеры</a>
               </li>
               <li>
-                <a href="">Фитнес браслеты</a>
+                <a href="#">Фитнес браслеты</a>
               </li>
               <li>
-                <a href="">Умные часы</a>
+                <a href="#">Умные часы</a>
               </li>
               <li>
-                <a href="">Квадрокоптер</a>
+                <a href="#">Квадрокоптер</a>
               </li>
             </ul>
           </li>
           <li>
-            <a href="">Доставка</a>
+            <a href="#">Доставка</a>
           </li>
           <li>
-            <a href="">Гарантия</a>
+            <a href="#">Гарантия</a>
           </li>
           <li>
-            <a href="">Контакты</a>
+            <a href="#">Контакты</a>
           </li>
         </ul>
       </nav>
@@ -65,13 +65,13 @@
           <li>
             <div>
               <span>01</span>
-              <a href="">
+              <a href="#">
                 <img src="https://via.placeholder.com/150x100" alt="Самая длинная селфи палка &laquo;Бренд&raquo;">
               </a>
               <p>Делай селфи,<br>как Бен Стиллер!</p>
               <p>Самая длинная палка для селфи доступна в&nbsp;нашем магазине.<br>Восемь (Восемь, Карл!) метров длиной
                 и&nbsp;весом всего 5&nbsp;килограмм.</p>
-              <a href="">Подробнее</a>
+              <a href="#">Подробнее</a>
               <table>
                 <tr>
                   <td>8,5 м</td>
@@ -89,13 +89,13 @@
           <li>
             <div>
               <span>02</span>
-              <a href="">
+              <a href="#">
                 <img src="https://via.placeholder.com/150x100" alt="Фитнес-браслет &laquo;Бренд&raquo;">
               </a>
               <p>Худеем<br>правильно!</p>
               <p>Мотивирующие фитнес-браслеты помогут найти в&nbsp;себе силы<br>не&nbsp;пропускать занятия
                 и&nbsp;соблюдать диету.</p>
-              <a href="">Подробнее</a>
+              <a href="#">Подробнее</a>
               <table>
                 <tr>
                   <td>48 Часов</td>
@@ -109,14 +109,14 @@
           <li>
             <div>
               <span>03</span>
-              <a href="">
+              <a href="#">
                 <img src="https://via.placeholder.com/150x100" alt="Квадрокоптер с&nbsp;мощным лазером, замаскированным
                 под стандартную камеру. &laquo;Бренд&raquo;">
               </a>
               <p>Порхает как бабочка,<br>жалит как пчела!</p>
               <p>Этот обычный, на&nbsp;первый взгляд, квадрокоптер оснащен<br>мощным лазером, замаскированным под
                 стандартную камеру.</p>
-              <a href="">Подробнее</a>
+              <a href="#">Подробнее</a>
               <table>
                 <tr>
                   <td>800 м</td>
@@ -142,37 +142,37 @@
         <h2>Популярный каталог товаров</h2>
         <ul>
           <li>
-            <a href="">
+            <a href="#">
               <img src="https://via.placeholder.com/150x100" alt="Товары категории
               &laquo;Виртуальная реальность&raquo;">Виртуальная реальность
             </a>
           </li>
           <li>
-            <a href="">
+            <a href="#">
               <img src="https://via.placeholder.com/150x100" alt="Товары категории
               &laquo;Моноподы для селфи&raquo;">Моноподы для селфи
             </a>
           </li>
           <li>
-            <a href="">
+            <a href="#">
               <img src="https://via.placeholder.com/150x100" alt="Товары категории
               &laquo;Экшн-камеры&raquo;">Экшн-Камеры
             </a>
           </li>
           <li>
-            <a href="">
+            <a href="#">
               <img src="https://via.placeholder.com/150x100" alt="Товары категории
               &laquo;Фитнес-браслеты&raquo;">Фитнес-браслеты
             </a>
           </li>
           <li>
-            <a href="">
+            <a href="#">
               <img src="https://via.placeholder.com/150x100" alt="Товары категории
               &laquo;Умные часы&raquo;">Умные часы
             </a>
           </li>
           <li>
-            <a href="">
+            <a href="#">
               <img src="https://via.placeholder.com/150x100" alt="Товары категории
               &laquo;Квадрокоптеры&raquo;">Квадрокоптеры
             </a>
@@ -270,13 +270,13 @@
     <footer>
       <ul>
         <li>
-          <a href="">Войти</a>
+          <a href="#">Войти</a>
         </li>
         <li>
-          <a href="">Сравнить</a>
+          <a href="#">Сравнить</a>
         </li>
         <li>
-          <a href="">Корзина</a>
+          <a href="#">Корзина</a>
         </li>
       </ul>
       <a>
