Добавил input тег label

--- a/index.html
+++ b/index.html
@@ -11,7 +11,10 @@
           <img src="https://via.placeholder.com/150x100" alt="Логотип интернет магазина &laquo;Девайс&raquo;">
         </a>
         <form action="https://echo.htmlacademy.ru" method="post">
-          <input type="search" name="search" placeholder="Поиск по&nbsp;сайту">
+          <label>
+            <span class="visually-hidden">Поиск</span>
+            <input type="search" name="search" placeholder="Поиск по&nbsp;сайту">
+          </label>
         </form>
         <ul>
           <li>
