Базовая разметка страницы каталога

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 <a href="#">Вирутальная реальность</a>
               </li>
               <li>
-                <a href="#">Моноподы для селфи</a>
+                <a href="catalog.html">Моноподы для селфи</a>
               </li>
               <li>
                 <a href="#">Экшн-камеры</a>
