Добавил контентные изображения на страницу каталога

--- a/catalog.html
+++ b/catalog.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="utf-8">
     <title>HTML Academy: Девайс</title>
-    <link rel="icon" href="favicon.svg" type="image/svg+×ml">
+    <link rel="icon" href="favicon.ico">
+    <link rel="icon" href="img/icon/favicon.svg" type="image/svg+×ml">
   </head>
   <body>
     <header>
@@ -139,7 +140,7 @@
         <ul>
           <li>
             <article>
-              <img src="https://via.placeholder.com/150x100" alt="Любительская селфи палка. 1100 руб.">
+              <img src="img/product_1.jpg" width="360" height="380" alt="Любительская селфи палка. 1100 руб.">
               <a href="#">В корзину</a>
               <a href="#">Добавить к сравнению</a>
               <a href="#">
@@ -150,7 +151,7 @@
           </li>
           <li>
             <article>
-              <img src="https://via.placeholder.com/150x100" alt="Профессиональная селфи-палка. 1500 руб.">
+              <img src="img/product_2.jpg" width="360" height="380" alt="Профессиональная селфи-палка. 1500 руб.">
               <a href="#">В корзину</a>
               <a href="#">Добавить к сравнению</a>
               <a href="#">
@@ -161,7 +162,7 @@
           </li>
           <li>
             <article>
-              <img src="https://via.placeholder.com/150x100" alt="Непотопляемая селфи-палка. 1500 руб.">
+              <img src="img/product_3.jpg" width="360" height="380" alt="Непотопляемая селфи-палка. 1500 руб.">
               <a href="#">В корзину</a>
               <a href="#">Добавить к сравнению</a>
               <a href="#">
@@ -172,7 +173,7 @@
           </li>
           <li>
             <article>
-              <img src="https://via.placeholder.com/150x100" alt="Селфи-палка &laquo;Следуй за мной&raquo;. 1900 руб.">
+              <img src="img/product_4.jpg" width="360" height="380" alt="Селфи-палка &laquo;Следуй за мной&raquo;. 1900 руб.">
               <a href="#">В корзину</a>
               <a href="#">Добавить к сравнению</a>
               <a href="#">
