Добавил контентные изображения для слайдера на главную страницу

--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="utf-8">
     <title>HTML Academy: Девайс</title>
-    <link rel="icon" href="favicon.svg" type="image/svg+×ml">
+    <link rel="icon" href="favicon.ico">
+    <link rel="icon" href="img/icon/favicon.svg" type="image/svg+×ml">
   </head>
   <body>
     <header>
@@ -70,7 +71,7 @@
             <div>
               <span>01</span>
               <a href="#">
-                <img src="https://via.placeholder.com/150x100" alt="Самая длинная селфи палка &laquo;Бренд&raquo;">
+                <img src="img/promo_1.png" width="384" height="486" alt="Самая длинная селфи палка &laquo;Бренд&raquo;">
               </a>
               <p>Делай селфи,<br>как Бен Стиллер!</p>
               <p>Самая длинная палка для селфи доступна в&nbsp;нашем магазине.<br>Восемь (Восемь, Карл!) метров длиной
@@ -94,7 +95,7 @@
             <div>
               <span>02</span>
               <a href="#">
-                <img src="https://via.placeholder.com/150x100" alt="Фитнес-браслет &laquo;Бренд&raquo;">
+                <img src="img/promo_2.png" width="345" height="483" alt="Фитнес-браслет &laquo;Бренд&raquo;">
               </a>
               <p>Худеем<br>правильно!</p>
               <p>Мотивирующие фитнес-браслеты помогут найти в&nbsp;себе силы<br>не&nbsp;пропускать занятия
@@ -114,8 +115,8 @@
             <div>
               <span>03</span>
               <a href="#">
-                <img src="https://via.placeholder.com/150x100" alt="Квадрокоптер с&nbsp;мощным лазером, замаскированным
-                под стандартную камеру. &laquo;Бренд&raquo;">
+                <img src="img/promo_3.png" width="526" height="334" alt="Квадрокоптер с&nbsp;мощным лазером,
+                замаскированным под стандартную камеру. &laquo;Бренд&raquo;">
               </a>
               <p>Порхает как бабочка,<br>жалит как пчела!</p>
               <p>Этот обычный, на&nbsp;первый взгляд, квадрокоптер оснащен<br>мощным лазером, замаскированным под
