--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <title>HTML Academy: Девайс</title>
     <link rel="icon" href="favicon.ico">
     <link rel="icon" href="img/icon/favicon.svg" type="image/svg+×ml">
+    <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
     <header>
