--- a/index.html
+++ b/index.html
@@ -80,16 +80,16 @@
               <p class="slide__description">Самая длинная палка для селфи доступна в&nbsp;нашем магазине.<br>Восемь (Восемь,
                 Карл!) метров длиной и&nbsp;весом всего 5&nbsp;килограмм.</p>
               <a class="link" href="#">Подробнее</a>
-              <table class="сharacteristics">
-                <tr class="сharacteristics__line">
-                  <td class="сharacteristics__column">8,5 м</td>
-                  <td class="сharacteristics__column">5 кг</td>
-                  <td class="сharacteristics__column">Карбон</td>
+              <table class="characteristics">
+                <tr class="characteristics__line">
+                  <td class="characteristics__column">8,5 м</td>
+                  <td class="characteristics__column">5 кг</td>
+                  <td class="characteristics__column">Карбон</td>
                 </tr>
-                <tr class="сharacteristics__line">
-                  <th class="сharacteristics__column">Длина палки</th>
-                  <th class="сharacteristics__column">Вес палки</th>
-                  <th class="сharacteristics__column">Материал</th>
+                <tr class="characteristics__line">
+                  <th class="characteristics__column--description">Длина палки</th>
+                  <th class="characteristics__column--description">Вес палки</th>
+                  <th class="characteristics__column--description">Материал</th>
                 </tr>
               </table>
             </div>
@@ -104,12 +104,12 @@
               <p class="slide__description">Мотивирующие фитнес-браслеты помогут найти в&nbsp;себе силы<br>не&nbsp;пропускать
                 занятия и&nbsp;соблюдать диету.</p>
               <a class="link" href="#">Подробнее</a>
-              <table class="сharacteristics">
-                <tr class="сharacteristics__line">
-                  <td class="сharacteristics__column">48 Часов</td>
+              <table class="characteristics">
+                <tr class="characteristics__line">
+                  <td class="characteristics__column">48 Часов</td>
                 </tr>
-                <tr class="сharacteristics__line">
-                  <th class="сharacteristics__column">Без подзарядки</th>
+                <tr class="characteristics__line">
+                  <th class="characteristics__column--description">Без подзарядки</th>
                 </tr>
               </table>
             </div>
@@ -125,14 +125,14 @@
               <p class="slide__description">Этот обычный, на&nbsp;первый взгляд, квадрокоптер оснащен<br>мощным лазером,
                 замаскированным под стандартную камеру.</p>
               <a class="link" href="#">Подробнее</a>
-              <table class="сharacteristics">
-                <tr class="сharacteristics__line">
-                  <td class="сharacteristics__column">800 м</td>
-                  <td class="сharacteristics__column">50 м</td>
+              <table class="characteristics">
+                <tr class="characteristics__line">
+                  <td class="characteristics__column">800 м</td>
+                  <td class="characteristics__column">50 м</td>
                 </tr>
-                <tr class="сharacteristics__line">
-                  <th class="сharacteristics__column">Дальность полета</th>
-                  <th class="сharacteristics__column">Радиус поражения</th>
+                <tr class="characteristics__line">
+                  <th class="characteristics__column--description">Дальность полета</th>
+                  <th class="characteristics__column--description">Радиус поражения</th>
                 </tr>
               </table>
             </div>
@@ -194,13 +194,13 @@
         <article class="slider-service">
           <ul class="slide-service__list">
             <li class="slide-service__item">
-              <button class="slide-service__button" type="button">Доставка</button>
+              <button class="link link--active" type="button">Доставка</button>
             </li>
             <li class="slide-service__item">
-              <button class="slide-service__button" type="button">Гарантия</button>
+              <button class="link" type="button">Гарантия</button>
             </li>
             <li class="slide-service__item">
-              <button class="slide-service__button" type="button">Кредит</button>
+              <button class="link" type="button">Кредит</button>
             </li>
           </ul>
           <div class="slide-service slide-service_one">
@@ -227,7 +227,7 @@
         </article>
       </section>
       <section class="popular-product">
-        <h2 class="popular-product__title">Популярные производители</h2>
+        <h2 class="visually-hidden">Популярные производители</h2>
         <ul class="popular-product__list">
           <li class="popular-product__item">
            <a class="popular-product__link">
@@ -296,13 +296,13 @@
       <p class="address-footer">г. Москва, ул. Строителей, 15</p>
       <ul class="nav-menu nav-menu--low">
         <li class="nav-menu__item nav-menu__item--low">
-          <a class="nav-menu__link nav-menu__link-low" href="#">Доставка</a>
+          <a class="nav-menu__link nav-menu__link--low" href="#">Доставка</a>
         </li>
         <li class="nav-menu__item nav-menu__item--low">
-          <a class="nav-menu__link nav-menu__link-low" href="#">Гарантия</a>
+          <a class="nav-menu__link nav-menu__link--low" href="#">Гарантия</a>
         </li>
         <li class="nav-menu__item nav-menu__item--low">
-          <a class="nav-menu__link nav-menu__link-low" href="#">Контакты</a>
+          <a class="nav-menu__link nav-menu__link--low" href="#">Контакты</a>
         </li>
       </ul>
       <a class="tel-number" href="tel:+74954959595">+7 (495) 495-95-95</a>
