--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>HTML Academy: Девайс</title>
     <link rel="icon" href="favicon.ico">
-    <link rel="icon" href="img/icon/favicon.svg" type="image/svg+×ml">
+    <link rel="icon" href="img/icon/favicon.svg" type="image/x-icon">
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/style.css">
   </head>
@@ -69,6 +69,7 @@
       </nav>
       <!-- Слайдер -->
       <article class="slider">
+        <h2 class="visually-hidden">Слайдер с товарами</h2>
         <ul class="slider__list">
           <li class="slider__item slider_one">
             <div>
