--- a/catalog.html
+++ b/catalog.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html class="page" lang="ru">
   <head>
     <meta charset="utf-8">
     <title>HTML Academy: Девайс</title>
@@ -11,8 +11,8 @@
   <body class="page__body">
     <header class="page-header">
       <nav class="main-nav__wrapper">
-        <a class="logo">
-          <img class="logo-img" src="https://via.placeholder.com/150x100" alt="Логотип интернет магазина
+        <a class="logo" href="index.html">
+          <img class="logo-img" src="img/icon/logo.svg" width="163" height="35" alt="Логотип интернет магазина
           &laquo;Девайс&raquo;">
         </a>
         <form class="search-form" action="https://echo.htmlacademy.ru" method="post">
