--- a/index.html
+++ b/index.html
@@ -273,6 +273,7 @@
         </ul>
       </section>
       <section class="info-block container">
+        <h2 class="visually-hidden">Информация о доставке и о том где мы находимся</h2>
         <section class="about-us">
           <h2 class="about-us__title">О нас</h2>
           <p class="about-us__description">Огромный выбор гаджетов не&nbsp;оставит равнодушным гика,<br>который есть в&nbsp;каждом
@@ -314,11 +315,11 @@
           </ul>
           <a class="logo logo--footer">
             <svg width="163" height="35" fill="none" xmlns="http://www.w3.org/2000/svg">
-              <g clip-path="url(#clip0)">
+              <g clip-path="url(#clip1)">
                 <path fill-rule="evenodd" clip-rule="evenodd" d="M-.15.7v33.6h13.53a15.72 15.72 0 0011.72-4.82 16.46 16.46 0 004.71-11.98A16.46 16.46 0 0019.75 1.88 15.72 15.72 0 0013.38.7H-.15zm7.73 26.21V8.09h5.8a8.65 8.65 0 016.5 2.57 9.4 9.4 0 012.5 6.84 9.4 9.4 0 01-2.5 6.84 8.64 8.64 0 01-6.5 2.57h-5.8zm34.8-5.95h12.08v-7.3H42.38V8.09h13.29V.7H34.65v33.6H55.9v-7.39H42.38v-5.95zM78.72 34.3L89.74.7H81.3l-7.5 24.72L66.3.7h-8.45l11.02 33.6h9.85zm14.4 0h7.74V.7h-7.73v33.6zm38.62-1.41a15.5 15.5 0 006.04-5.7l-6.67-3.83a7.48 7.48 0 01-3.16 3.02 9.87 9.87 0 01-4.67 1.1 9.6 9.6 0 01-7.17-2.73 9.91 9.91 0 01-2.69-7.25 9.93 9.93 0 012.69-7.25 9.6 9.6 0 017.17-2.74 9.9 9.9 0 014.64 1.08 7.59 7.59 0 013.2 3.05l6.66-3.84a15.87 15.87 0 00-6.09-5.69 17.42 17.42 0 00-8.4-2.08 17.12 17.12 0 00-17.6 17.47 17.12 17.12 0 0017.59 17.47c2.95.03 5.86-.69 8.46-2.08zm17.88-11.93h12.08v-7.3h-12.08V8.09h13.29V.7h-21.03v33.6h21.27v-7.39h-13.53v-5.95z" fill="#F0C52E"/>
               </g>
               <defs>
-                <clipPath id="clip0">
+                <clipPath id="clip1">
                   <path fill="#fff" d="M0 0h163v35H0z"/>
                 </clipPath>
               </defs>
@@ -368,11 +369,11 @@
           <p class="copyright">
             <a class="copyright__link" href="https://htmlacademy.ru/intensive/htmlcss">
               <svg width="27" height="34" fill="none" xmlns="http://www.w3.org/2000/svg">
-                <g clip-path="url(#clip0)">
+                <g clip-path="url(#clip2)">
                   <path d="M13.62.02L13.47 0 0 1.4V26l13.47 8 13.43-7.97.05-.02V1.4L13.62 0zm11.4 12.07L13.49 5.33v-.1l-.08.05-.1-.06v.1L1.94 12.1V3.14l11.54-1.21 11.55 1.2v8.96zM13.4 6.78l11.52 6.7-4.48 2.63-7.09-4.21-.01 1.4 5.9 3.51-.86.5-5.03-2.98-.01 1.42L17.16 18l-.78.53-3.03-1.79-.01 1.41 1.85 1.1-1.8 1.07-11.36-6.73 11.38-6.82zM1.93 15.09l11.4 6.77.02 1.04-7.94-4.71-.02 1.4 7.98 4.8.02 1.06-7.97-4.72-.01 1.4 8.02 4.82.04.02 8.15-4.86-.02-5.16 3.42-2.03v10l-11.55 6.85L1.93 24.9V15.1z" fill="#F0C52E"/>
                 </g>
                 <defs>
-                  <clipPath id="clip0">
+                  <clipPath id="clip2">
                     <path fill="#fff" d="M0 0h26.94v34H0z"/>
                   </clipPath>
                 </defs>
