--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
           </div>
           <ul class="nav-menu">
             <li class="nav-menu__item">
-              <a class="nav-menu__link" href="#">Каталог товаров</a>
-              <div class="catalog-menu__submenu">
+              <a class="nav-menu__link link-catalog" href="#">Каталог товаров</a>
+              <div class="catalog-menu__submenu visually-hidden">
                 <ul class="catalog-menu">
                   <li class="catalog-menu__item">
                     <a class="catalog-menu__link" href="#">Вирутальная реальность</a>
