Добавил классов в ссылки подменю

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
           <ul class="nav-menu">
             <li class="nav-menu__item">
               <a class="nav-menu__link link-catalog" href="#">Каталог товаров</a>
-              <div class="catalog-menu__submenu visually-hidden">
+              <div class="catalog-menu__submenu">
                 <ul class="catalog-menu">
                   <li class="catalog-menu__item">
                     <a class="catalog-menu__link" href="#">Вирутальная реальность</a>
@@ -77,10 +77,10 @@
               <a class="nav-menu__link" href="#">Доставка</a>
             </li>
             <li class="nav-menu__item">
-              <a class="nav-menu__link" href="#">Гарантия</a>
+              <a class="nav-menu__link link-guarantees" href="#">Гарантия</a>
             </li>
             <li class="nav-menu__item">
-              <a class="nav-menu__link" href="#">Контакты</a>
+              <a class="nav-menu__link link-contact" href="#">Контакты</a>
             </li>
           </ul>
         </div>
