Добавил кнопку поиска

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
               <label>
                 <span class="visually-hidden">Поиск</span>
                 <input class="search-form__input" type="search" name="search" placeholder="Поиск по&nbsp;сайту">
+                <button class="btn-search" type="submit">Найти</button>
               </label>
             </form>
             <ul class="menu">
