добавил id для лейбла

--- a/index.html
+++ b/index.html
@@ -25,13 +25,15 @@
         </a>
         <div class="site-navigation">
           <div class="site-navigation__wrapper">
+
             <form class="search-form" action="https://echo.htmlacademy.ru" method="post">
-              <label>
+              <label for="search">
                 <span class="visually-hidden">Поиск</span>
-                <input class="search-form__input" type="search" name="search" placeholder="Поиск по&nbsp;сайту">
               </label>
+              <input class="search-form__input" type="search" name="search" id="search" placeholder="Поиск по&nbsp;сайту">
               <button class="btn-search" type="submit">Найти</button>
             </form>
+
             <ul class="menu">
               <li class="menu__item">
                 <a class="menu__link link-enter" href="#">Войти</a>
